# cerulion

./: README.md
.lcm_venv/: pyvenv.cfg
godot/cerulion/: .gitignore  Cerulion.sln  icon.svg.import  project.godot
godot/cerulion/scenes/: PubSub.cs  SensorData.gd  main.tscn  test_dotnet.tscn
godot/docs/godot-4.3/: .buildinfo  404.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
godot/godot-docs-html-master/: .buildinfo  404.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
godot/godot-docs-html-master/about/: faq.html  (+6 more)
godot/renard/: .gitignore  ControlBar.tscn  GraphPanel.tscn  LeftPanel.tscn  StatusPanel.tscn  TimelinePanel.tscn  UI.tscn  VisButtons.tscn  WindowBase.gd  channel_status.tscn  demo.tscn  demo_UI.tscn  demo_theme.tres  main.tscn  project.godot  robot.tscn  temp_UI_theme.tres  test.csproj  test.csproj.old  test.sln  topBar.tscn  unitree_go2.tscn
godot/test/: UI.tscn  icon.svg.import  project.godot  robot.tscn
lcm/: test_package_TestMessage.c
lcm/demo_bag/: rosbag_to_lcm_publisher.py
lcm/test_stuff/: publish_test_LCM_msg.py  test_msg_t.lcm  test_package_TestMessage.h
media/logo/: Logo Dark Icon.png.import  Logo Dark Icon.svg.import  Logo Main For White Background.svg.import  Logo Main Icon.png.import  Logo Main Vertical For White Background.png.import  Logo Main Vertical For White Background.svg.import  Logo White Icon.svg.import
robot/unitree_go2/: joint_states_t.lcm  rosbag_to_lcm_publisher.py  unitree_go2_test_setup.sh
rust/cerulion_rust/: Cargo.toml
rust/cerulion_rust/src/: lib.rs
(+3674 files in other folders)
