[package]
name = "cerulion_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
iceoryx2 = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", branch = "main" }
